Fix documentation and better repository testing
